@@ -32,6 +32,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #4180: The warnings registries are now reset when the filters
+  are modified.
+
 - Issue #22419: Limit the length of incoming HTTP request in wsgiref server to
   65536 bytes and send a 414 error code for higher lengths. Patch contributed
   by Devin Cook.
